[gd_scene load_steps=4 format=3 uid="uid://cmlaqj0mjtfu3"]

[ext_resource type="Script" uid="uid://bxcw6hgcn2af0" path="res://Saving/player.gd" id="1_6shyj"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ed4c7"]
size = Vector2(32, 32)

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_fnfvu"]

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1_6shyj")

[node name="Collider" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_ed4c7")

[node name="Sprite" type="Sprite2D" parent="."]
scale = Vector2(32, 32)
texture = SubResource("PlaceholderTexture2D_fnfvu")

[node name="Label1" type="Label" parent="."]
offset_left = -73.0
offset_top = -47.0
offset_right = -33.0
offset_bottom = -24.0
text = "1: A"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label2" type="Label" parent="."]
offset_left = -20.0
offset_top = -46.0
offset_right = 20.0
offset_bottom = -23.0
text = "2: B"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label3" type="Label" parent="."]
offset_left = 30.0
offset_top = -47.0
offset_right = 70.0
offset_bottom = -24.0
text = "3: C"
horizontal_alignment = 1
vertical_alignment = 1
